--- a/smearing.ipynb
+++ b/smearing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "043f7f6b",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
     "\n",
     "\n",
     "# Specify the directory containing the .dat files\n",
-    "directory_path = './EIC_Final_Data_NLO/'\n",
+    "directory_path = './EIC_Final_Data_NNLO/'\n",
     "\n",
     "# Construct the full pattern for .dat files\n",
     "file_pattern = os.path.join(directory_path, '*.dat')\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "07ecabea",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "2d18a763",
    "metadata": {},
    "outputs": [
@@ -132,12 +132,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DataFrame has been written to ./EIC_Final_Data_NLO/ep_NC_10x100_middle-nlo-as0.118-new-thexp_smeared.dat with preamble from ./EIC_Final_Data_NLO/ep_NC_10x100_middle-nlo-as0.118-new-thexp.dat\n",
-      "DataFrame has been written to ./EIC_Final_Data_NLO/ep_NC_5x100_middle-nlo-as0.118-new-thexp_smeared.dat with preamble from ./EIC_Final_Data_NLO/ep_NC_5x100_middle-nlo-as0.118-new-thexp.dat\n",
-      "DataFrame has been written to ./EIC_Final_Data_NLO/ep_NC_10x275_middle-nlo-as0.118-new-thexp_smeared.dat with preamble from ./EIC_Final_Data_NLO/ep_NC_10x275_middle-nlo-as0.118-new-thexp.dat\n",
-      "DataFrame has been written to ./EIC_Final_Data_NLO/ep_NC_5x41_middle-nlo-as0.118-new-thexp_smeared.dat with preamble from ./EIC_Final_Data_NLO/ep_NC_5x41_middle-nlo-as0.118-new-thexp.dat\n",
-      "DataFrame has been written to ./EIC_Final_Data_NLO/ep_CC_18x275_middle-nlo-as0.118-new-thexp_smeared.dat with preamble from ./EIC_Final_Data_NLO/ep_CC_18x275_middle-nlo-as0.118-new-thexp.dat\n",
-      "DataFrame has been written to ./EIC_Final_Data_NLO/ep_NC_18x275_middle-nlo-as0.118-new-thexp_smeared.dat with preamble from ./EIC_Final_Data_NLO/ep_NC_18x275_middle-nlo-as0.118-new-thexp.dat\n"
+      "DataFrame has been written to ./EIC_Final_Data_NNLO/ep_NC_18x275_middle-nnlo-as0.118-new-thexp_smeared.dat with preamble from ./EIC_Final_Data_NNLO/ep_NC_18x275_middle-nnlo-as0.118-new-thexp.dat\n",
+      "DataFrame has been written to ./EIC_Final_Data_NNLO/ep_NC_5x100_middle-nnlo-as0.118-new-thexp_smeared.dat with preamble from ./EIC_Final_Data_NNLO/ep_NC_5x100_middle-nnlo-as0.118-new-thexp.dat\n",
+      "DataFrame has been written to ./EIC_Final_Data_NNLO/ep_NC_5x41_middle-nnlo-as0.118-new-thexp_smeared.dat with preamble from ./EIC_Final_Data_NNLO/ep_NC_5x41_middle-nnlo-as0.118-new-thexp.dat\n",
+      "DataFrame has been written to ./EIC_Final_Data_NNLO/ep_NC_10x100_middle-nnlo-as0.118-new-thexp_smeared.dat with preamble from ./EIC_Final_Data_NNLO/ep_NC_10x100_middle-nnlo-as0.118-new-thexp.dat\n",
+      "DataFrame has been written to ./EIC_Final_Data_NNLO/ep_CC_18x275_middle-nnlo-as0.118-new-thexp_smeared.dat with preamble from ./EIC_Final_Data_NNLO/ep_CC_18x275_middle-nnlo-as0.118-new-thexp.dat\n",
+      "DataFrame has been written to ./EIC_Final_Data_NNLO/ep_NC_10x275_middle-nnlo-as0.118-new-thexp_smeared.dat with preamble from ./EIC_Final_Data_NNLO/ep_NC_10x275_middle-nnlo-as0.118-new-thexp.dat\n"
      ]
     }
    ],
