--- a/smearing.ipynb
+++ b/smearing.ipynb
@@ -51,7 +51,6 @@
     "            column_names_raw = line[len(\"  ColumnName = \"):].strip()\n",
     "            # Use regex to split and clean the column names\n",
     "            column_names = re.findall(r'\"([^\"]*)\"', column_names_raw)\n",
-    "            # print(column_names)\n",
     "        elif starts_with_digit(line):\n",
     "            data_lines.append(line)\n",
     "    \n",
@@ -76,7 +75,6 @@
     "def generate_corr_err_shift(df , column):\n",
     "    sysErrDict = {key: value for key, value in []}\n",
     "    unique_values = df[column].unique()\n",
-    "    # print(f'unique corgenerate_corr_err_shift err vals: {unique_values}')\n",
     "    for elem in unique_values:\n",
     "        sysErrDict[elem] = generate_random_number(0,elem)\n",
     "    return sysErrDict\n",
@@ -85,7 +83,6 @@
     "#  function Find column names that start with 'norm'\n",
     "def find_corr_err(df):\n",
     "    norm_columns = [col for col in df.columns if col.startswith('norm')]\n",
-    "    # print(norm_columns)\n",
     "    return norm_columns\n",
     "\n",
     "##################################################################################################################\n",
@@ -116,7 +113,7 @@
     "        # Write the preamble lines to the output file\n",
     "        file.writelines(preamble_lines)\n",
     "    \n",
-    "    # Write the DataFrame to the output file in TSV format, appending mode\n",
+    "    # Write the DataFrame to the output file in TSV format, appending mode, w/o header\n",
     "    df.to_csv(output_file, sep='\\t', index=False, mode='a', header=False)\n",
     "\n",
     "    print(f\"DataFrame has been written to {output_file} with preamble from {preamble_file}\")"
@@ -143,25 +140,14 @@
    ],
    "source": [
     "# Iterate through the list of .dat files and process each one\n",
-    "# data_dict = {key: value for key, value in []} # initializing an empty dictionary \n",
     "for file_path in dat_files:\n",
     "    try:\n",
     "        # data = read_dat_file(file_path)\n",
     "        df = read_dat_file(file_path)\n",
-    "        \n",
-    "        # Print the NumPy array for verification\n",
-    "        # print(f\"Data from {file_path} as NumPy array:\")\n",
-    "        # Get the file name from the file path\n",
+    "                # Get the file name from the file path\n",
     "        file_name = os.path.basename(file_path)\n",
     "        file_name = file_name.replace(\".dat\",\"\")\n",
-    "        # print(data[:,-1])\n",
-    "        # print(\"----- End of array -----\\n\")\n",
     "        \n",
-    "        # Print the DataFrame for verification\n",
-    "        # print(f\"Data from {file_name} as pandas DataFrame:\")\n",
-    "        # print(df)\n",
-    "        # print(\"----- End of DataFrame -----\\n\")\n",
-    "\n",
     "        # Loop through the column and multiply each element by 2\n",
     "        sysErrDict = {key: value for key, value in []} \n",
     "        for elem in find_corr_err(df):\n",
@@ -175,14 +161,9 @@
     "\n",
     "            for col in find_corr_err(df):\n",
     "                sys_shift  = sysErrDict[df.at[i, col]]\n",
-    "                # print(f'df.at[i, col]: {df.at[i, col]} and sys_shift: {sys_std}')\n",
     "                sys_shift *= df.at[i, column_to_modify]/100.0\n",
     "                \n",
     "                df.at[i, column_to_modify] += sys_shift\n",
-    "\n",
-    "        # print(df)\n",
-    "        # print(\"----- End of DataFrame -----\\n\")\n",
-    "\n",
     "        \n",
     "    except Exception as e:\n",
     "        print(f\"An error occurred while processing {file_path}: {e}\")\n",
