smearing of LHeC

--- a/smearing.ipynb
+++ b/smearing.ipynb
@@ -148,7 +148,7 @@
     "        file_name = os.path.basename(file_path)\n",
     "        file_name = file_name.replace(\".dat\",\"\")\n",
     "        \n",
-    "        # Loop through the column and multiply each element by 2\n",
+    "        # Loop through the column and update the column that needs changing\n",
     "        sysErrDict = {key: value for key, value in []} \n",
     "        for elem in find_corr_err(df):\n",
     "            sysErrDict.update(generate_corr_err_shift(df , elem))\n",
