creating LHeC smeared data

--- a/smearing_LHeC.ipynb
+++ b/smearing_LHeC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "043f7f6b",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "07ecabea",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2d18a763",
    "metadata": {},
    "outputs": [
@@ -144,283 +144,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "['eelen', 'ethee', 'ehadr', 'radco', 'egamp', 'effic', 'enois']\n",
-      "DataFrame has been written to ./LHeC_Ee60/lhec_D4_dataempn1000nc-thexp_smeared.dat with preamble from ./LHeC_Ee60/lhec_D4_dataempn1000nc-thexp.dat\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "['ccsys']\n",
-      "DataFrame has been written to ./LHeC_Ee60/lhec_D4_dataempn1000cc-thexp_smeared.dat with preamble from ./LHeC_Ee60/lhec_D4_dataempn1000cc-thexp.dat\n"
+      "DataFrame has been written to ./LHeC_Ee60/smeared/lhec_D6_datacc-thexp_smeared.dat with preamble from ./LHeC_Ee60/lhec_D6_datacc-thexp.dat\n",
+      "DataFrame has been written to ./LHeC_Ee60/smeared/lhec_D1_datacc-thexp_smeared.dat with preamble from ./LHeC_Ee60/lhec_D1_datacc-thexp.dat\n",
+      "DataFrame has been written to ./LHeC_Ee60/smeared/lhec_D2_datacc-thexp_smeared.dat with preamble from ./LHeC_Ee60/lhec_D2_datacc-thexp.dat\n",
+      "DataFrame has been written to ./LHeC_Ee60/smeared/lhec_D4_datanc-thexp_smeared.dat with preamble from ./LHeC_Ee60/lhec_D4_datanc-thexp.dat\n",
+      "DataFrame has been written to ./LHeC_Ee60/smeared/lhec_D8_datacc-thexp_smeared.dat with preamble from ./LHeC_Ee60/lhec_D8_datacc-thexp.dat\n",
+      "DataFrame has been written to ./LHeC_Ee60/smeared/lhec_D6_datanc-thexp_smeared.dat with preamble from ./LHeC_Ee60/lhec_D6_datanc-thexp.dat\n",
+      "DataFrame has been written to ./LHeC_Ee60/smeared/lhec_D5_datacc-thexp_smeared.dat with preamble from ./LHeC_Ee60/lhec_D5_datacc-thexp.dat\n",
+      "DataFrame has been written to ./LHeC_Ee60/smeared/lhec_D5_datanc-thexp_smeared.dat with preamble from ./LHeC_Ee60/lhec_D5_datanc-thexp.dat\n",
+      "DataFrame has been written to ./LHeC_Ee60/smeared/lhec_D7_datacc-thexp_smeared.dat with preamble from ./LHeC_Ee60/lhec_D7_datacc-thexp.dat\n",
+      "DataFrame has been written to ./LHeC_Ee60/smeared/lhec_D4_datacc-thexp_smeared.dat with preamble from ./LHeC_Ee60/lhec_D4_datacc-thexp.dat\n",
+      "DataFrame has been written to ./LHeC_Ee60/smeared/lhec_D9_datanc-thexp_smeared.dat with preamble from ./LHeC_Ee60/lhec_D9_datanc-thexp.dat\n",
+      "DataFrame has been written to ./LHeC_Ee60/smeared/lhec_D9_datacc-thexp_smeared.dat with preamble from ./LHeC_Ee60/lhec_D9_datacc-thexp.dat\n",
+      "DataFrame has been written to ./LHeC_Ee60/smeared/lhec_D1_datanc-thexp_smeared.dat with preamble from ./LHeC_Ee60/lhec_D1_datanc-thexp.dat\n",
+      "DataFrame has been written to ./LHeC_Ee60/smeared/lhec_D8_datanc-thexp_smeared.dat with preamble from ./LHeC_Ee60/lhec_D8_datanc-thexp.dat\n",
+      "DataFrame has been written to ./LHeC_Ee60/smeared/lhec_D2_datanc-thexp_smeared.dat with preamble from ./LHeC_Ee60/lhec_D2_datanc-thexp.dat\n",
+      "DataFrame has been written to ./LHeC_Ee60/smeared/lhec_D7_datanc-thexp_smeared.dat with preamble from ./LHeC_Ee60/lhec_D7_datanc-thexp.dat\n"
      ]
     }
    ],
@@ -455,7 +194,7 @@
     "        print(f\"An error occurred while processing {file_path}: {e}\")\n",
     "\n",
     "    preamble_file  = directory_path + file_name + \".dat\"\n",
-    "    outputFileName = directory_path + file_name + \"_smeared.dat\"\n",
+    "    outputFileName = directory_path + \"smeared/\" + file_name + \"_smeared.dat\"\n",
     "    write_dataframe_with_preamble(df, preamble_file, outputFileName)"
    ]
   },
