test new systematics

--- a/smearing_LHeC.ipynb
+++ b/smearing_LHeC.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "2d18a763",
    "metadata": {},
    "outputs": [
@@ -184,11 +184,12 @@
     "            std *= df.at[i, column_to_modify]/100.0\n",
     "            df.at[i, column_to_modify] += generate_random_number(0,std)\n",
     "\n",
+    "            sys_shift = 0.0\n",
     "            for col in find_corr_err(df):\n",
-    "                sys_shift  = sysErrDict[df.at[i, col]]\n",
-    "                sys_shift *= df.at[i, column_to_modify]/100.0\n",
-    "                \n",
-    "                df.at[i, column_to_modify] += sys_shift\n",
+    "                sys_shift += sysErrDict[df.at[i, col]]**2\n",
+    "            \n",
+    "            sys_shift *= df.at[i, column_to_modify]/100.0    # all errors are in percent\n",
+    "            df.at[i, column_to_modify] += sys_shift\n",
     "        \n",
     "    except Exception as e:\n",
     "        print(f\"An error occurred while processing {file_path}: {e}\")\n",
