update sys errs

--- a/smearing_LHeC.ipynb
+++ b/smearing_LHeC.ipynb
@@ -188,6 +188,7 @@
     "            for col in find_corr_err(df):\n",
     "                sys_shift += sysErrDict[df.at[i, col]]**2\n",
     "            \n",
+    "            sys_shift  = sys_shift**0.5 \n",
     "            sys_shift *= df.at[i, column_to_modify]/100.0    # all errors are in percent\n",
     "            df.at[i, column_to_modify] += sys_shift\n",
     "        \n",
