--- a/smearing_LHeC.ipynb
+++ b/smearing_LHeC.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "2d18a763",
    "metadata": {},
    "outputs": [
@@ -8362,15 +8362,15 @@
     "\n",
     "        for i in range(len(df)):\n",
     "            std  = np.sqrt(df.at[i, 'stat']**2 + df.at[i, 'uncor']**2) \n",
-    "            std *= df.at[i, column_to_modify]/100.0\n",
-    "            df.at[i, column_to_modify] += generate_random_number(0,std)\n",
+    "            std *= df.at[i, column_to_modify]/100.0 \n",
+    "            df.at[i, column_to_modify] += generate_random_number(0,std) *0.0\n",
     "\n",
     "            sys_shift = 0.0\n",
     "            for col in find_corr_err(df):\n",
     "                print(f'row: {i} and error: {df.at[i, col]} and column: {col}')\n",
     "                sys_shift += sysErrDict[df.at[i, col]]**2\n",
     "            \n",
-    "            sys_shift  = sys_shift**0.5 *0.0\n",
+    "            sys_shift  = sys_shift**0.5\n",
     "            sys_shift *= df.at[i, column_to_modify]/100.0    # all errors are in percent\n",
     "            df.at[i, column_to_modify] += sys_shift\n",
     "        \n",
